deprecated, use alternatives
Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
+<h1>DEPRECATED / ARCHIVED</h1>
+<p>This group / project is no longer maintained, there are sufficient alternatives to go to like:</p>
+<ul>
+    <li><a href="https://ddev.com/">DDEV</a></li>
+    <li><a href="https://lando.dev/">Lando</a></li>
+</ul>
+
 <h2>DockerWest</h2>
 <p>Docker West-Flanders. We try to bring you docker environments that are easy to use and deploy.</p>
 <p>&nbsp;</p>
